# Course-Recommendation-System

./: .gitignore
course_recommendation_research/: .gitignore  README.md  pyproject.toml
course_recommendation_research/.virtual_documents/notebooks/: 00_data_audit_and_cleaning.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_train_multiple_models.ipynb  04_recommender_models.ipynb
course_recommendation_research/app/: app.py
course_recommendation_research/notebooks/: 00_data_audit_and_cleaning.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_train_multiple_models.ipynb  04_recommender_models.ipynb  05_shap_explainability.ipynb  06_export_artifacts_for_streamlit.ipynb
course_recommendation_research/src/course_rec/: __init__.py  data.py  features.py  models.py  recommender.py
